# C-Primer-Plus-3rd-Ed

./: .clang-tidy  CMakeLists.txt  README.md  exercises.h  main.c
.github/workflows/: tests.yml
exercises/chapter 01/: exercise 01.c  info.h
exercises/chapter 02/: exercise 01.c  exercise 02.c  exercise 03.c  exercise 05.c  exercise 06.c  info.h
exercises/chapter 03/: exercise 01.c  exercise 03.c  exercise 04.c  exercise 05.c  exercise 06.c  info.h
exercises/chapter 04/: exercise 01.c  exercise 02.c  exercise 03.c  exercise 04.c  exercise 05.c  info.h
exercises/chapter 05/: exercise 01.c  exercise 04.c  exercise 05.c  info.h
exercises/chapter 06/: exercise 01.c  exercise 02.c  exercise 03.c  exercise 04.c  exercise 05.c  exercise 07.c  exercise 08.c  exercise 13.c  info.h
exercises/chapter 07/: exercise 01.c  exercise 03.c  exercise 05.c  exercise 08.c  exercise 10.c  info.h
exercises/chapter 08/: exercise 03.c  exercise 05.c  exercise 06.c  exercise 07.c  info.h
exercises/chapter 09/: exercise 01.c  exercise 02.c  exercise 03.c  exercise 04.c  exercise 05.c  exercise 06.c  exercise 07.c  exercise 08.c  exercise 09.c  info.h
exercises/chapter 10/: exercise 01.c  exercise 03.c  exercise 04.c  exercise 05.c  exercise 06.c  exercise 08.c  exercise 09.c  exercise 10.c  exercise 11.c  info.h
exercises/chapter 11/: exercise 02.c  exercise 03.c  exercise 04.c  exercise 05.c  exercise 06.c  exercise 07.c  exercise 08.c  exercise 09.c  exercise 10.c  exercise 11.c  exercise 12.c  exercise 13.c  exercise 14.c  exercise 15.c  info.h
(+65 files in other folders)
